fix spacing issue for main container

--- a/src/main/Main.css
+++ b/src/main/Main.css
@@ -12,7 +12,7 @@
     box-shadow: 0 14px 28px rgba(0,0,0,0.15), 0 10px 10px rgba(0,0,0,0.11);
 
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     flex-direction: column;
 }
 
